[package]
name = "lasersell-stream-proto"
edition = "2021"
license = "MIT"
version = "0.2.0"
description = "Protocol message types for LaserSell stream clients"
readme = "README.md"
repository = "https://github.com/lasersell/lasersell-stream-proto"
homepage = "https://github.com/lasersell/lasersell-stream-proto"
documentation = "https://docs.rs/lasersell-stream-proto"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
